# image-classifier

./: README.md  main.py  pyproject.toml
image_classifier/: __init__.py  data_structures.py  dataset.py  device.py  evaluation.py  logger.py  metric.py  network.py  training.py
tests/: __init__.py  test_dataset.py  test_metric.py
